--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,3 +1,11 @@
-.wat
-  background-color black
-  color #FFFFFF
+body
+  padding-top 70px
+
+.navbar-header a.navbar-brand
+  h6
+    color #CCC
+
+footer
+  padding 0 15px
+  p
+    border-top 1px solid rgba(157, 157, 157, 0.5)
