--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,10 +1,11 @@
-doctype html 5
+doctype html
 html
     head
+        title MEAN app
         link(href='favicon.ico', rel='shortcut icon' type='image/x-icon')
-        link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
-        link(rel='stylesheet' type="text/css" href='/public/vendor/toastr/toastr.min.css')
-        link(rel='stylesheet' type="text/css" href='/public/css/site.css')
+        link(rel="stylesheet" type="text/css" href="/vendor/bootstrap/dist/css/bootstrap.css")
+        link(rel='stylesheet' type="text/css" href='/vendor/toastr/toastr.min.css')
+        link(rel='stylesheet' type="text/css" href='/css/site.css')
     body(ng-app='skeleton')
         block main-content
         include scripts
