--- a/server/views/partials/main.html
+++ b/server/views/partials/main.html
@@ -1,1 +1,1 @@
-<h1>partial</h1><h2>{{ test }}</h2>
+<div class="container"><div class="jumbotron"><h1>MEAN app</h1><p>Hi, Welcome. Cheers!</p></div></div>
