--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,6 +1,18 @@
 extends ../includes/layout
 
 block main-content
+    .navbar.navbar-inverse.navbar-fixed-top
+        .container
+            .navbar-header
+                a.navbar-brand(href='#') MEAN app
+            .navbar-collapse.collapse
+                ul.nav.navbar-nav
+                    li
+                        a(href='#') Home
+                    li
+                        a(href='#') About
     section.content
         .container(ng-view)
-    h2= mongoMessage
+    h2 #{mongoMessage}
+    footer.container.text-center
+        p &copy; MEAN app copyright
