--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -3,3 +3,5 @@ script(type="text/javascript", src="/vendor/angular/angular.min.js")
 script(type="text/javascript", src="/vendor/angular-resource/angular-resource.min.js")
 script(type="text/javascript", src="/vendor/angular-route/angular-route.min.js")
 script(type="text/javascript", src="/app/app.js")
+script(type="text/javascript", src="/app/main/mainCtrl.js")
+script(type="text/javascript", src="/app/account/navbarLoginCtrl.js")
