--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 70px;
+  padding-top: 65px;
 }
 .navbar-header a.navbar-brand h6 {
   color: #ccc;
@@ -16,4 +16,7 @@ footer p {
 }
 .navbar-form button {
   margin-left: 5px;
+}
+.toast-top-right {
+  margin-top: 60px;
 }
