--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,5 +1,5 @@
 body
-  padding-top 70px
+  padding-top 65px
 
 .navbar-header a.navbar-brand
   h6
@@ -16,3 +16,6 @@ footer
     margin-left 5px
   button
     margin-left 5px
+
+.toast-top-right
+    margin-top 60px
