--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -7,5 +7,6 @@ html
         link(rel='stylesheet' type="text/css" href='/vendor/toastr/toastr.min.css')
         link(rel='stylesheet' type="text/css" href='/css/site.css')
     body(ng-app='skeleton')
+        include currentUser
         block main-content
         include scripts
