--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -11,5 +11,7 @@
                 |{{ Identity.currentUser.firstName + ' ' + Identity.currentUser.lastName + ' '}}
                 span.caret
             ul.dropdown-menu
+                li(ng-show='Identity.currentUser.isAdmin()')
+                    a(href='/admin/users') User Admin
                 li
                     a(href='#', ng-click='signOut()') Sign Out
