--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -1,12 +1,13 @@
-script(type="text/javascript", src="/vendor/jquery/dist/jquery.min.js")
-script(type="text/javascript", src="/vendor/toastr/toastr.min.js")
-script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.min.js")
-script(type="text/javascript", src="/vendor/angular/angular.min.js")
-script(type="text/javascript", src="/vendor/angular-resource/angular-resource.min.js")
-script(type="text/javascript", src="/vendor/angular-route/angular-route.min.js")
+script(type="text/javascript", src="/vendor/jquery/dist/jquery.js")
+script(type="text/javascript", src="/vendor/toastr/toastr.js")
+script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.js")
+script(type="text/javascript", src="/vendor/angular/angular.js")
+script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
+script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/app/app.js")
 script(type="text/javascript", src="/app/main/mainCtrl.js")
 script(type="text/javascript", src="/app/account/navbarLoginCtrl.js")
-script(type="text/javascript", src="/app/common/identity.js")
+script(type="text/javascript", src="/app/account/identity.js")
 script(type="text/javascript", src="/app/common/notifier.js")
 script(type="text/javascript", src="/app/account/Auth.js")
+script(type="text/javascript", src="/app/account/User.js")
