--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -7,7 +7,7 @@ script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/app/app.js")
 script(type="text/javascript", src="/app/main/mainCtrl.js")
 script(type="text/javascript", src="/app/account/navbarLoginCtrl.js")
-script(type="text/javascript", src="/app/account/identity.js")
-script(type="text/javascript", src="/app/common/notifier.js")
-script(type="text/javascript", src="/app/account/Auth.js")
-script(type="text/javascript", src="/app/account/User.js")
+script(type="text/javascript", src="/app/account/sIdentity.js")
+script(type="text/javascript", src="/app/common/sNotifier.js")
+script(type="text/javascript", src="/app/account/sAuth.js")
+script(type="text/javascript", src="/app/account/sUser.js")
