--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -11,3 +11,4 @@ script(type="text/javascript", src="/app/account/sIdentity.js")
 script(type="text/javascript", src="/app/common/sNotifier.js")
 script(type="text/javascript", src="/app/account/sAuth.js")
 script(type="text/javascript", src="/app/account/sUser.js")
+script(type="text/javascript", src="/app/admin/sUserListCtrl.js")
