add local sign up functionality

--- a/public/app/account/signup.jade
+++ b/public/app/account/signup.jade
@@ -14,14 +14,14 @@
               input.form-control(name="password", type="password", ng-model="password", required)
 
           .form-group
-            label.col-md-2.control-label(for="fname") First Name
+            label.col-md-2.control-label(for="firstName") First Name
             .col-md-10
-              input.form-control(name="fname", type="text", placehoder="First Name", ng-model="fname", required)
+              input.form-control(name="firstName", type="text", placehoder="First Name", ng-model="firstName", required)
 
           .form-group
-            label.col-md-2.control-label(for="lname") Last Name
+            label.col-md-2.control-label(for="lastName") Last Name
             .col-md-10
-              input.form-control(name="lname", type="text", placehoder="Last Name", ng-model="lname", required)
+              input.form-control(name="lastName", type="text", placehoder="Last Name", ng-model="lastName", required)
 
           .form-group
             .col-md-10.col-md-offset-2
