add user profile section, bug fixes

--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -17,4 +17,6 @@
         li(ng-show='Identity.currentUser.isAdmin()')
           a(href='/admin/users') User Admin
         li
+          a(href='/profile') User profile
+        li
           a(href='#', ng-click='signOut()') Sign Out
