add Course model and UI for courses

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -17,5 +17,11 @@ footer
   button
     margin-left 5px
 
+.top-padding-med
+  padding-top 10px
+
+.margin-left-med
+  margin-left 10px
+
 .toast-top-right
     margin-top 60px
