--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -14,3 +14,5 @@ script(type="text/javascript", src="/app/account/sUser.js")
 script(type="text/javascript", src="/app/admin/sUserListCtrl.js")
 script(type="text/javascript", src="/app/account/sSignupCtrl.js")
 script(type="text/javascript", src="/app/account/sProfileCtrl.js")
+script(type="text/javascript", src="/app/courses/sCourseListCtrl.js")
+script(type="text/javascript", src="/app/courses/sCourse.js")
