--- a/public/css/site.css
+++ b/public/css/site.css
@@ -17,6 +17,12 @@ footer p {
 .navbar-form button {
   margin-left: 5px;
 }
+.top-padding-med {
+  padding-top: 10px;
+}
+.margin-left-med {
+  margin-left: 10px;
+}
 .toast-top-right {
   margin-top: 60px;
 }
