--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -4,11 +4,13 @@ block main-content
   .navbar.navbar-inverse.navbar-fixed-top
     .container
       .navbar-header
-        a.navbar-brand(href="/") Mean app skeleton
+        a.navbar-brand(href="/") Mean app
       .navbar-collapse.collapse
         ul.nav.navbar-nav
           li
             a(href="/") Home
+          li
+            a(href="/courses") Courses
         div(ng-include="'/partials/account/navbar-login'")
 
   section.content
