add data caching. Finished Skeleton

--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -16,3 +16,5 @@ script(type="text/javascript", src="/app/account/sSignupCtrl.js")
 script(type="text/javascript", src="/app/account/sProfileCtrl.js")
 script(type="text/javascript", src="/app/courses/sCourseListCtrl.js")
 script(type="text/javascript", src="/app/courses/sCourse.js")
+script(type="text/javascript", src="/app/courses/sCachedCourses.js")
+script(type="text/javascript", src="/app/courses/sCourseDetailsCtrl.js")
